# bumle-service-event-scraper-cron

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/bumle_service_event_scraper_cron/: __main__.py
tests/: test_pi.py
