[project]
name = "bumle-service-event-scraper-cron"
version = "0.1.0"
description = "Bumle event scraper CRON service"
readme = "README.md"
authors = [
    { name = "Nicklas Bekkevold", email = "44287251+nicklasbekkevold@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
bumle-service-event-scraper-cron = "bumle_service_event_scraper_cron:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.397",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]
